Hoan thien chuc nang CRUD san pham

--- a/buoi2/demo/src/main/resources/templates/books.html
+++ b/buoi2/demo/src/main/resources/templates/books.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}"> <head>
     <title>Danh sách sách</title>
 </head>
 <body>
-    <h1>Danh sách sách</h1>
-    
-    <a href="/books/add">Thêm sách mới</a>
-    <br><br>
-    
-    <table border="1" style="border-collapse: collapse; width: 50%;">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Tiêu đề</th>
-                <th>Tác giả</th>
-                <th>Hành động</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="book : ${books}">
-                <td th:text="${book.id}"></td>
-                <td th:text="${book.title}"></td>
-                <td th:text="${book.author}"></td>
-                <td>
-                    <a th:href="@{/books/edit/{id}(id=${book.id})}">Sửa</a>
-                    <a th:href="@{/books/delete/{id}(id=${book.id})}">Xóa</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div layout:fragment="content"> <h1 class="mb-3">Danh sách sách</h1>
+        <a href="/books/add" class="btn btn-primary mb-3">Thêm sách mới</a>
+        
+        <table class="table table-bordered table-striped">
+            <thead class="table-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Tiêu đề</th>
+                    <th>Tác giả</th>
+                    <th>Hành động</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="book : ${books}">
+                    <td th:text="${book.id}"></td>
+                    <td th:text="${book.title}"></td>
+                    <td th:text="${book.author}"></td>
+                    <td>
+                        <a th:href="@{/books/edit/{id}(id=${book.id})}" class="btn btn-sm btn-warning">Sửa</a>
+                        <a th:href="@{/books/delete/{id}(id=${book.id})}" class="btn btn-sm btn-danger" onclick="return confirm('Xóa nhé?');">Xóa</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
