--- a/buoi2/demo/src/main/resources/templates/add-book.html
+++ b/buoi2/demo/src/main/resources/templates/add-book.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Thêm sách mới</title>
+    <title>Thêm sách</title>
 </head>
 <body>
-    <h1>Thêm sách mới</h1>
-    <form action="#" th:action="@{/books/add}" th:object="${book}" method="post">
-        <table>
-            <tr>
-                <td>Tiêu đề:</td>
-                <td><input type="text" th:field="*{title}" /></td>
-            </tr>
-            <tr>
-                <td>Tác giả:</td>
-                <td><input type="text" th:field="*{author}" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><button type="submit">Thêm</button></td>
-            </tr>
-        </table>
-    </form>
+    <div layout:fragment="content">
+        <h1>Thêm sách mới</h1>
+        <form th:action="@{/books/add}" th:object="${book}" method="post" class="w-50">
+            <div class="mb-3">
+                <label class="form-label">Tiêu đề:</label>
+                <input type="text" th:field="*{title}" class="form-control" required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Tác giả:</label>
+                <input type="text" th:field="*{author}" class="form-control" required />
+            </div>
+            <button type="submit" class="btn btn-success">Lưu lại</button>
+            <a href="/books" class="btn btn-secondary">Hủy</a>
+        </form>
+    </div>
 </body>
 </html>
