--- a/buoi2/demo/src/main/resources/templates/edit-book.html
+++ b/buoi2/demo/src/main/resources/templates/edit-book.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
     <title>Sửa sách</title>
 </head>
 <body>
-    <h1>Sửa sách</h1>
-    <form action="#" th:action="@{/books/edit}" th:object="${book}" method="post">
-        <input type="hidden" th:field="*{id}" />
-        
-        <table>
-            <tr>
-                <td>Tiêu đề:</td>
-                <td><input type="text" th:field="*{title}" /></td>
-            </tr>
-            <tr>
-                <td>Tác giả:</td>
-                <td><input type="text" th:field="*{author}" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><button type="submit">Cập nhật</button></td>
-            </tr>
-        </table>
-    </form>
+    <div layout:fragment="content">
+        <h1>Sửa sách</h1>
+        <form th:action="@{/books/edit}" th:object="${book}" method="post" class="w-50">
+            <input type="hidden" th:field="*{id}" />
+            <div class="mb-3">
+                <label class="form-label">Tiêu đề:</label>
+                <input type="text" th:field="*{title}" class="form-control" required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Tác giả:</label>
+                <input type="text" th:field="*{author}" class="form-control" required />
+            </div>
+            <button type="submit" class="btn btn-primary">Cập nhật</button>
+            <a href="/books" class="btn btn-secondary">Quay lại</a>
+        </form>
+    </div>
 </body>
 </html>
